compiler/tools/fpp-to-cpp/test/port/duplicate.ref.txt
fpp-to-cpp
[ local path prefix ]/tools/fpp-to-cpp/test/port/duplicate.fpp:5.1
port Duplicate(u: U32)
^
error: duplicate C++ file DuplicatePortAc.hpp
previous file would be generated here:
[ local path prefix ]/tools/fpp-to-cpp/test/port/duplicate.fpp:2.3
  port Duplicate(u: U32)
  ^
